Refactor : Slice 기반으로 가져오도록 변경